<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">寻线者</string>
    <string name="action_settings">Settings</string>
    <string name="logo_text">巡线者</string>
    <string name="start">进入系统</string>
    <string name="exit">退出系统</string>
    <string name="syn">同步数据</string>
    <string name="logo_text2">——————欢迎使用华讯产品</string>
    <string name="img">图片</string>
    

</resources>